--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Style.css" />
-    <title>tictactoe</title>
+    <link rel="stylesheet" href="./Style.css" />
+    <title>tictactoe(Vannila Js)</title>
   </head>
   <body>
     <audio src="./src//mp3//spin.wav" id='spinaudio'  muted autoplay=""></audio>
@@ -47,7 +47,7 @@
         <span class="">★</span >  <a href="https://github.com/srikanth9493/Tictokte">This project </a></span >  
           Made   with <span style="color: #e25555;">&hearts;</span> in Javascript
      </div> 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
  
