--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="footer">
       <span class="star">
-        <span class="">★</span >  <a href="https://github.com/srikanth9493/Tictokte">This project </a></span >  
+        <span class="">★</span >  <a href="https://github.com/IMRANDIL/Tictoctoe">This project </a></span >  
           Made   with <span style="color: #e25555;">&hearts;</span> in Javascript
      </div> 
     <script src="./app.js"></script>
